--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.2",
     "element-plus": "^2.13.0",
+    "jwt-decode": "^4.0.0",
+    "papaparse": "^5.5.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
